# Parallel-numerical-methods

./: .gitignore  LU-decomposition.sln  LU-decomposition.vcxproj  LU-decomposition.vcxproj.filters  block_matrix.h  block_matrix_2.h  math.h  matrix.h  source.cpp
LU-decomposition/: CMakeLists.txt
LU-decomposition/src/: main.cpp  math.h
biconjugate-gradients/: CMakeLists.txt
biconjugate-gradients/src/: CRS.hpp  main.cpp
wave-scheme-dirichlet-poisson/: CMakeLists.txt
wave-scheme-dirichlet-poisson/src/: main.cpp
